k8s/base/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: querido-diario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/okfn-brasil/querido-diario-frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: 128Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          volumeMounts:
            - name: frontend-env
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: frontend-env
          configMap:
            name: frontend-env
